Moved CSV files to separate folder

--- a/LSTMdoge.ipynb
+++ b/LSTMdoge.ipynb
@@ -171,7 +171,7 @@
     }
    ],
    "source": [
-    "df_tweets = pd.read_csv(\"trump_tweets.csv\", parse_dates = ['date'], index_col=7)\n",
+    "df_tweets = pd.read_csv(\"Data/trump_tweets.csv\", parse_dates = ['date'], index_col=7)\n",
     "df_tweets.head()"
    ]
   },
@@ -434,7 +434,7 @@
     }
    ],
    "source": [
-    "df_doge = pd.read_csv(\"Daily-DOGE-USD.csv\", parse_dates=['Date'], index_col=0)\n",
+    "df_doge = pd.read_csv(\"Data/Daily-DOGE-USD.csv\", parse_dates=['Date'], index_col=0)\n",
     "df_doge.head()"
    ]
   },
