--- a/LSTMretailData.ipynb
+++ b/LSTMretailData.ipynb
@@ -142,7 +142,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"Year 2009-2010.csv\", encoding=\"ISO-8859-1\")\n",
+    "df = pd.read_csv(\"Data/Year 2009-2010.csv\", encoding=\"ISO-8859-1\")\n",
     "\n",
     "df.head()"
    ]
