Added more comments

--- a/LSTM365Days.ipynb
+++ b/LSTM365Days.ipynb
@@ -629,6 +629,7 @@
     }
    ],
    "source": [
+    "# Tesla stock data from Yahoo Finance\n",
     "df_tsla = pd.read_csv(\"Data/TSLA.csv\", parse_dates=['Date'], index_col=0)\n",
     "print(df_tsla.shape)\n",
     "df_tsla.head()"
@@ -716,6 +717,22 @@
    ],
    "source": [
     "# Google Trends Data for the keyword \"Tesla\"\n",
+    "# Explanation of columns copied from dataDownload.py:\n",
+    "\"\"\"\n",
+    "    Contains 4 columns.\n",
+    "            The column named after the word argument contains the daily search\n",
+    "            volume already scaled and comparable through time.\n",
+    "            The column f'{word}_unscaled' is the original daily data fetched\n",
+    "            month by month, and it is not comparable across different months\n",
+    "            (but is comparable within a month).\n",
+    "            The column f'{word}_monthly' contains the original monthly data\n",
+    "            fetched at once. The values in this column have been backfilled\n",
+    "            so that there are no NaN present.\n",
+    "            The column 'scale' contains the scale used to obtain the scaled\n",
+    "            daily data.\n",
+    "\"\"\"\n",
+    "# We only need the \"Tesla\" column, which is scaled across the various months. Renamed \"Tesla Trend\" for clarity\n",
+    "\n",
     "df_tslaTrend = pd.read_csv(\"Data/tslaTrend2.csv\", parse_dates=['date'], index_col=0)\n",
     "print(df_tslaTrend.shape)\n",
     "df_tslaTrend.drop(columns=['Tesla_unscaled', 'Tesla_monthly', 'isPartial', 'scale'], axis=1, inplace=True)\n",
@@ -1148,7 +1165,7 @@
    "source": [
     "# Aligning Tweet Data with Doge Data\n",
     "#df_trump = df_trump.loc[(df_trump.index >= '2011-12-01')]\n",
-    "# Dropping ID column since it's unexpected to be useful\n",
+    "# Dropping ID column since it's not expected to be useful\n",
     "df_trump = df_trump.drop(columns=['id'], axis=1)\n",
     "\n",
     "# Changing by-the-second data to by-the-day data\n",
@@ -1407,8 +1424,8 @@
     "    = df[['Musk Tweet Count', 'Musk Likes', 'Musk Replies', 'Musk Retweets', 'Musk Positive Sentiment', \\\n",
     "            'Musk Contains Tesla', 'Musk Negative Sentiment', 'Trump Tweet Count', 'Trump Favorites', 'Trump Retweets', \\\n",
     "            'Trump Positive Sentiment', 'Trump Contains Tesla', 'Trump Negative Sentiment']].fillna(0)\n",
-    "#df[['Trend Value']] = df[['Trend Value']].fillna(method='bfill')\n",
-    "#df[['Trend Value']] = df[['Trend Value']].fillna(method='ffill')\n",
+    "\n",
+    "# Rows with NaN values for Open, High, Low, etc will be removed later by the series_to_supervised function\n",
     "df.head()"
    ]
   },
@@ -1653,6 +1670,7 @@
     "reframed = series_to_supervised(scaled, 1, 1)\n",
     "\n",
     "# Drop Columns of Variables We Aren't Predicting\n",
+    "# We want all variables we're including in the model for t-1 and only the variable we're predicting for time t\n",
     "reframed.drop(reframed.columns[[39,38,37,36,35,34,33,32,31,30,29,28,27,26,25,24,22,21,20]], axis=1, inplace=True)\n",
     "print(reframed.shape)\n",
     "reframed.head()\n"
@@ -1681,11 +1699,10 @@
    "source": [
     "values = reframed.values\n",
     "# split into train, test, and prediction sets\n",
-    "#n_predict = floor((len(values) * 0.10))\n",
-    "n_predict = 365\n",
-    "n_train = floor((len(values) * 0.80))\n",
+    "n_predict = 365 # We are predicting 365 days\n",
+    "n_train = floor((len(values) * 0.80)) # 80% of the data is currently used for train\n",
     "train = values[:n_train, :]\n",
-    "test = values[n_train:len(values)-n_predict, :]\n",
+    "test = values[n_train:len(values)-n_predict, :] # What's left is used for test\n",
     "predict = values[len(values)-n_predict:, :]\n",
     "# split into input and outputs\n",
     "train_X, train_y = train[:, :-1], train[:, -1]\n",
@@ -1716,16 +1733,18 @@
    "source": [
     "# Import keras libraries\n",
     "from tensorflow.keras import Sequential\n",
-    "from tensorflow.keras.layers import Dense, LSTM, Dropout\n",
+    "from tensorflow.keras.layers import Dense, LSTM\n",
     "from tensorflow.keras.constraints import NonNeg\n",
     "from tensorflow.keras.callbacks import Callback\n",
     "\n",
     "# Unused\n",
+    "\"\"\"\n",
     "class stopAtLossValue(Callback):\n",
     "        def on_batch_end(self, batch, logs={}):\n",
     "            THR = 0.009 #Assign THR with the value at which you want to stop training.\n",
     "            if logs.get('loss') <= THR:\n",
-    "                 self.model.stop_training = True"
+    "                 self.model.stop_training = True\n",
+    "\"\"\""
    ]
   },
   {
@@ -2317,6 +2336,7 @@
     "shap.initjs()\n",
     "\n",
     "# Data has to be converted to 2D\n",
+    "# The \"20\" here is the number of features in the model\n",
     "shap_values_2D = shap_values[0].reshape(-1,20)"
    ]
   },
