--- a/googleTrendDownload.ipynb
+++ b/googleTrendDownload.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here's an example of using the code in dataDownload.py to download daily Google Trends data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
