Added month, day of the month, and day of the week columns

--- a/dataPreprocessing.ipynb
+++ b/dataPreprocessing.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
        "2009-05-12 14:07:00                 False  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +495,7 @@
        "[5 rows x 39 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +621,7 @@
        "2010-07-07  3.280  3.326  2.996  3.160      3.160  34608500"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -708,7 +708,7 @@
        "2010-07-04         2.94"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -950,7 +950,7 @@
        "2011-12-29                        1  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -985,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1109,7 +1109,7 @@
        "2009-05-13                         0  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1136,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1156,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1190,9 +1190,7 @@
        "      <th>Musk Likes</th>\n",
        "      <th>Musk Replies</th>\n",
        "      <th>Musk Retweets</th>\n",
-       "      <th>Musk Positive Sentiment</th>\n",
-       "      <th>Musk Contains Tesla</th>\n",
-       "      <th>Musk Negative Sentiment</th>\n",
+       "      <th>...</th>\n",
        "      <th>Trump Tweet Count</th>\n",
        "      <th>Trump Favorites</th>\n",
        "      <th>Trump Retweets</th>\n",
@@ -1200,9 +1198,13 @@
        "      <th>Trump Contains Tesla</th>\n",
        "      <th>Trump Negative Sentiment</th>\n",
        "      <th>Tesla Trend</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>Day of the Month</th>\n",
+       "      <th>Day of the Week</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Date</th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -1238,9 +1240,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
        "      <td>1.0</td>\n",
        "      <td>16.0</td>\n",
        "      <td>27.0</td>\n",
@@ -1248,6 +1248,9 @@
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>7.00</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2010-07-02</th>\n",
@@ -1261,9 +1264,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
        "      <td>2.0</td>\n",
        "      <td>36.0</td>\n",
        "      <td>78.0</td>\n",
@@ -1271,6 +1272,9 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>6.09</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2010-07-06</th>\n",
@@ -1284,9 +1288,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
        "      <td>1.0</td>\n",
        "      <td>6.0</td>\n",
        "      <td>47.0</td>\n",
@@ -1294,6 +1296,9 @@
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>2.10</td>\n",
+       "      <td>7</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2010-07-07</th>\n",
@@ -1307,9 +1312,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -1317,6 +1320,9 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>3.78</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2010-07-08</th>\n",
@@ -1330,9 +1336,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -1340,9 +1344,13 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>5.60</td>\n",
+       "      <td>7</td>\n",
+       "      <td>8</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5 rows × 23 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1354,48 +1362,50 @@
        "2010-07-07  3.280  3.326  2.996  3.160      3.160  34608500.0   \n",
        "2010-07-08  3.228  3.504  3.114  3.492      3.492  38557000.0   \n",
        "\n",
-       "            Musk Tweet Count  Musk Likes  Musk Replies  Musk Retweets  \\\n",
-       "Date                                                                    \n",
-       "2010-07-01               0.0         0.0           0.0            0.0   \n",
-       "2010-07-02               0.0         0.0           0.0            0.0   \n",
-       "2010-07-06               0.0         0.0           0.0            0.0   \n",
-       "2010-07-07               0.0         0.0           0.0            0.0   \n",
-       "2010-07-08               0.0         0.0           0.0            0.0   \n",
+       "            Musk Tweet Count  Musk Likes  Musk Replies  Musk Retweets  ...  \\\n",
+       "Date                                                                   ...   \n",
+       "2010-07-01               0.0         0.0           0.0            0.0  ...   \n",
+       "2010-07-02               0.0         0.0           0.0            0.0  ...   \n",
+       "2010-07-06               0.0         0.0           0.0            0.0  ...   \n",
+       "2010-07-07               0.0         0.0           0.0            0.0  ...   \n",
+       "2010-07-08               0.0         0.0           0.0            0.0  ...   \n",
        "\n",
-       "            Musk Positive Sentiment  Musk Contains Tesla  \\\n",
-       "Date                                                       \n",
-       "2010-07-01                      0.0                  0.0   \n",
-       "2010-07-02                      0.0                  0.0   \n",
-       "2010-07-06                      0.0                  0.0   \n",
-       "2010-07-07                      0.0                  0.0   \n",
-       "2010-07-08                      0.0                  0.0   \n",
+       "            Trump Tweet Count  Trump Favorites  Trump Retweets  \\\n",
+       "Date                                                             \n",
+       "2010-07-01                1.0             16.0            27.0   \n",
+       "2010-07-02                2.0             36.0            78.0   \n",
+       "2010-07-06                1.0              6.0            47.0   \n",
+       "2010-07-07                0.0              0.0             0.0   \n",
+       "2010-07-08                0.0              0.0             0.0   \n",
        "\n",
-       "            Musk Negative Sentiment  Trump Tweet Count  Trump Favorites  \\\n",
-       "Date                                                                      \n",
-       "2010-07-01                      0.0                1.0             16.0   \n",
-       "2010-07-02                      0.0                2.0             36.0   \n",
-       "2010-07-06                      0.0                1.0              6.0   \n",
-       "2010-07-07                      0.0                0.0              0.0   \n",
-       "2010-07-08                      0.0                0.0              0.0   \n",
+       "            Trump Positive Sentiment  Trump Contains Tesla  \\\n",
+       "Date                                                         \n",
+       "2010-07-01                       0.0                   0.0   \n",
+       "2010-07-02                       2.0                   0.0   \n",
+       "2010-07-06                       0.0                   0.0   \n",
+       "2010-07-07                       0.0                   0.0   \n",
+       "2010-07-08                       0.0                   0.0   \n",
        "\n",
-       "            Trump Retweets  Trump Positive Sentiment  Trump Contains Tesla  \\\n",
+       "            Trump Negative Sentiment  Tesla Trend  Month  Day of the Month  \\\n",
        "Date                                                                         \n",
-       "2010-07-01            27.0                       0.0                   0.0   \n",
-       "2010-07-02            78.0                       2.0                   0.0   \n",
-       "2010-07-06            47.0                       0.0                   0.0   \n",
-       "2010-07-07             0.0                       0.0                   0.0   \n",
-       "2010-07-08             0.0                       0.0                   0.0   \n",
+       "2010-07-01                       1.0         7.00      7                 1   \n",
+       "2010-07-02                       0.0         6.09      7                 2   \n",
+       "2010-07-06                       1.0         2.10      7                 6   \n",
+       "2010-07-07                       0.0         3.78      7                 7   \n",
+       "2010-07-08                       0.0         5.60      7                 8   \n",
        "\n",
-       "            Trump Negative Sentiment  Tesla Trend  \n",
-       "Date                                               \n",
-       "2010-07-01                       1.0         7.00  \n",
-       "2010-07-02                       0.0         6.09  \n",
-       "2010-07-06                       1.0         2.10  \n",
-       "2010-07-07                       0.0         3.78  \n",
-       "2010-07-08                       0.0         5.60  "
+       "            Day of the Week  \n",
+       "Date                         \n",
+       "2010-07-01                3  \n",
+       "2010-07-02                4  \n",
+       "2010-07-06                1  \n",
+       "2010-07-07                2  \n",
+       "2010-07-08                3  \n",
+       "\n",
+       "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1416,12 +1426,15 @@
     "# Rows with NaN values for Open, High, Low, etc will be removed later by the series_to_supervised function\n",
     "df.index.name='Date'\n",
     "df.dropna(inplace=True)\n",
+    "df['Month'] = pd.DatetimeIndex(df.index).month\n",
+    "df['Day of the Month'] = pd.DatetimeIndex(df.index).day\n",
+    "df['Day of the Week'] = pd.DatetimeIndex(df.index).dayofweek\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
