Added "Day of the Year" column, 18.34% error 365 Day

--- a/Thomas/dataPreprocessingNew.ipynb
+++ b/Thomas/dataPreprocessingNew.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
        "2010-07-08  3.228  3.504  3.114  3.492      3.492  38557000"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
        "2010-11-26  33.410000  33.810001  33.209999  33.799999  26.123804   12301200"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
        "2018-01-05              NaN"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +444,7 @@
        "2010-07-05         2.28"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +534,7 @@
        "2010-07-05         0.0"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +624,7 @@
        "2015-01-05     56.94"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +712,7 @@
        "2015-01-05      9.68"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +800,7 @@
        "2015-01-05                0.0"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -829,14 +829,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1763, 15)\n"
+      "(1763, 16)\n"
      ]
     },
     {
@@ -874,10 +874,12 @@
        "      <th>Month</th>\n",
        "      <th>Day of the Month</th>\n",
        "      <th>Day of the Week</th>\n",
+       "      <th>Day of the Year</th>\n",
        "      <th>Year</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Date</th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -898,12 +900,12 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2015-01-02</th>\n",
-       "      <td>44.574001</td>\n",
-       "      <td>44.650002</td>\n",
-       "      <td>42.652000</td>\n",
-       "      <td>43.862000</td>\n",
-       "      <td>43.862000</td>\n",
-       "      <td>23822000.0</td>\n",
+       "      <td>35.270000</td>\n",
+       "      <td>35.310001</td>\n",
+       "      <td>34.410000</td>\n",
+       "      <td>34.840000</td>\n",
+       "      <td>27.879498</td>\n",
+       "      <td>9756700.0</td>\n",
        "      <td>7.60</td>\n",
        "      <td>2.35</td>\n",
        "      <td>73.00</td>\n",
@@ -912,16 +914,17 @@
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>4</td>\n",
+       "      <td>2</td>\n",
        "      <td>2015</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2015-01-05</th>\n",
-       "      <td>42.910000</td>\n",
-       "      <td>43.299999</td>\n",
-       "      <td>41.431999</td>\n",
-       "      <td>42.018002</td>\n",
-       "      <td>42.018002</td>\n",
-       "      <td>26842500.0</td>\n",
+       "      <td>34.980000</td>\n",
+       "      <td>35.250000</td>\n",
+       "      <td>34.070000</td>\n",
+       "      <td>34.330002</td>\n",
+       "      <td>27.471386</td>\n",
+       "      <td>16223000.0</td>\n",
        "      <td>6.46</td>\n",
        "      <td>0.90</td>\n",
        "      <td>56.94</td>\n",
@@ -930,16 +933,17 @@
        "      <td>1</td>\n",
        "      <td>5</td>\n",
        "      <td>0</td>\n",
+       "      <td>5</td>\n",
        "      <td>2015</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2015-01-06</th>\n",
-       "      <td>42.012001</td>\n",
-       "      <td>42.840000</td>\n",
-       "      <td>40.841999</td>\n",
-       "      <td>42.256001</td>\n",
-       "      <td>42.256001</td>\n",
-       "      <td>31309500.0</td>\n",
+       "      <td>34.410000</td>\n",
+       "      <td>35.220001</td>\n",
+       "      <td>34.099998</td>\n",
+       "      <td>34.849998</td>\n",
+       "      <td>27.887503</td>\n",
+       "      <td>17747600.0</td>\n",
        "      <td>8.17</td>\n",
        "      <td>5.00</td>\n",
        "      <td>66.43</td>\n",
@@ -948,16 +952,17 @@
        "      <td>1</td>\n",
        "      <td>6</td>\n",
        "      <td>1</td>\n",
+       "      <td>6</td>\n",
        "      <td>2015</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2015-01-07</th>\n",
-       "      <td>42.669998</td>\n",
-       "      <td>42.956001</td>\n",
-       "      <td>41.956001</td>\n",
-       "      <td>42.189999</td>\n",
-       "      <td>42.189999</td>\n",
-       "      <td>14842000.0</td>\n",
+       "      <td>35.230000</td>\n",
+       "      <td>35.950001</td>\n",
+       "      <td>35.040001</td>\n",
+       "      <td>35.840000</td>\n",
+       "      <td>28.679720</td>\n",
+       "      <td>19319200.0</td>\n",
        "      <td>7.79</td>\n",
        "      <td>1.40</td>\n",
        "      <td>62.78</td>\n",
@@ -966,16 +971,17 @@
        "      <td>1</td>\n",
        "      <td>7</td>\n",
        "      <td>2</td>\n",
+       "      <td>7</td>\n",
        "      <td>2015</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2015-01-08</th>\n",
-       "      <td>42.562000</td>\n",
-       "      <td>42.759998</td>\n",
-       "      <td>42.001999</td>\n",
-       "      <td>42.124001</td>\n",
-       "      <td>42.124001</td>\n",
-       "      <td>17212500.0</td>\n",
+       "      <td>36.060001</td>\n",
+       "      <td>36.450001</td>\n",
+       "      <td>35.799999</td>\n",
+       "      <td>36.200001</td>\n",
+       "      <td>28.967798</td>\n",
+       "      <td>15206600.0</td>\n",
        "      <td>9.31</td>\n",
        "      <td>0.80</td>\n",
        "      <td>64.97</td>\n",
@@ -984,6 +990,7 @@
        "      <td>1</td>\n",
        "      <td>8</td>\n",
        "      <td>3</td>\n",
+       "      <td>8</td>\n",
        "      <td>2015</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -993,11 +1000,11 @@
       "text/plain": [
        "                 Open       High        Low      Close  Adj Close      Volume  \\\n",
        "Date                                                                            \n",
-       "2015-01-02  44.574001  44.650002  42.652000  43.862000  43.862000  23822000.0   \n",
-       "2015-01-05  42.910000  43.299999  41.431999  42.018002  42.018002  26842500.0   \n",
-       "2015-01-06  42.012001  42.840000  40.841999  42.256001  42.256001  31309500.0   \n",
-       "2015-01-07  42.669998  42.956001  41.956001  42.189999  42.189999  14842000.0   \n",
-       "2015-01-08  42.562000  42.759998  42.001999  42.124001  42.124001  17212500.0   \n",
+       "2015-01-02  35.270000  35.310001  34.410000  34.840000  27.879498   9756700.0   \n",
+       "2015-01-05  34.980000  35.250000  34.070000  34.330002  27.471386  16223000.0   \n",
+       "2015-01-06  34.410000  35.220001  34.099998  34.849998  27.887503  17747600.0   \n",
+       "2015-01-07  35.230000  35.950001  35.040001  35.840000  28.679720  19319200.0   \n",
+       "2015-01-08  36.060001  36.450001  35.799999  36.200001  28.967798  15206600.0   \n",
        "\n",
        "            Tesla Trend  Musk Trend  GM Trend  EV Trend  Coronavirus Trend  \\\n",
        "Date                                                                         \n",
@@ -1007,23 +1014,23 @@
        "2015-01-07         7.79        1.40     62.78     20.46                0.0   \n",
        "2015-01-08         9.31        0.80     64.97     19.14                0.0   \n",
        "\n",
-       "            Month  Day of the Month  Day of the Week  Year  \n",
-       "Date                                                        \n",
-       "2015-01-02      1                 2                4  2015  \n",
-       "2015-01-05      1                 5                0  2015  \n",
-       "2015-01-06      1                 6                1  2015  \n",
-       "2015-01-07      1                 7                2  2015  \n",
-       "2015-01-08      1                 8                3  2015  "
+       "            Month  Day of the Month  Day of the Week  Day of the Year  Year  \n",
+       "Date                                                                         \n",
+       "2015-01-02      1                 2                4                2  2015  \n",
+       "2015-01-05      1                 5                0                5  2015  \n",
+       "2015-01-06      1                 6                1                6  2015  \n",
+       "2015-01-07      1                 7                2                7  2015  \n",
+       "2015-01-08      1                 8                3                8  2015  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Merging Two Data Sets Together\n",
-    "df = df_tsla.merge(df_tslaTrend, how='outer', left_index=True, right_index=True)\n",
+    "df = df_GM.merge(df_tslaTrend, how='outer', left_index=True, right_index=True)\n",
     "#df = df.merge(df_teslaIncTrend, how='outer', left_index=True, right_index=True)\n",
     "df = df.merge(df_muskTrend, how='outer', left_index=True, right_index=True)\n",
     "df = df.merge(df_GMTrend, how='outer', left_index=True, right_index=True)\n",
@@ -1036,6 +1043,7 @@
     "df['Month'] = pd.DatetimeIndex(df.index).month\n",
     "df['Day of the Month'] = pd.DatetimeIndex(df.index).day\n",
     "df['Day of the Week'] = pd.DatetimeIndex(df.index).dayofweek\n",
+    "df['Day of the Year'] = pd.DatetimeIndex(df.index).dayofyear\n",
     "df['Year'] = pd.DatetimeIndex(df.index).year\n",
     "print(df.shape)\n",
     "df.head()"
@@ -1043,11 +1051,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('preprocessedTesla_MoreRecent.csv')"
+    "df.to_csv('preprocessedGM_MoreRecent.csv')"
    ]
   }
  ],
